Selection of bones bug. #41228

Closed
opened 2014-07-29 00:45:12 +02:00 by Ivam Pretti · 7 comments

System Information
Ubuntu 14.04, Intel onboard card

Blender Version 2.71 official release
Reproduceable: YES
Crash of Blender:NO

Short description of error
Bones keep selected in pose mode with un-visible bone layers.

Exact steps for others to reproduce the error
With an armature that has bones on diferent bone layers, in edit mode it works properly. You select a bone, the layer of this bone you turn the visibility off with this bone selected, the bone keep selected as it should. When you select another bone from a visible layer, the bone in the unvisible layer unselect. In pose mode is different, you select a bone, turn the visibility off with this bone selected, the bone keep selected as it should. When you select another bone from a visible layer, the bone in the unvisible layer KEEP SELECTED EVEN WITH THE DOT IN THE BONE LAYER SAYING IT IS NOT SELECTED! and this selection become a part of the selected bones in edit mode.

This cause a inumerals problems. For example at the operation of separating bones. The bones you dont know that they are selected, become a part of the new armature of the actual chosen separated bones.

System Information Ubuntu 14.04, Intel onboard card Blender Version 2.71 official release Reproduceable: YES Crash of Blender:NO Short description of error Bones keep selected in pose mode with un-visible bone layers. **Exact steps for others to reproduce the error** With an armature that has bones on diferent bone layers, in edit mode it works properly. You select a bone, the layer of this bone you turn the visibility off with this bone selected, the bone keep selected as it should. When you select another bone from a visible layer, the bone in the unvisible layer unselect. In pose mode is different, you select a bone, turn the visibility off with this bone selected, the bone keep selected as it should. When you select another bone from a visible layer, the bone in the unvisible layer KEEP SELECTED EVEN WITH THE DOT IN THE BONE LAYER SAYING IT IS NOT SELECTED! and this selection become a part of the selected bones in edit mode. This cause a inumerals problems. For example at the operation of separating bones. The bones you dont know that they are selected, become a part of the new armature of the actual chosen separated bones.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ivampretti

Added subscriber: @ivampretti
Bastien Montagne self-assigned this 2014-07-29 07:34:12 +02:00

This issue was referenced by 976526559d

This issue was referenced by 976526559d2690dfeda19acc6b82c6767f21d2eb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 976526559d.

Closed by commit 976526559d.
Author

When the bug fixed version will be released? only on the official 2.72?

When the bug fixed version will be released? only on the official 2.72?

You check it in nightly builds from our buildbot

You check it in nightly builds from [our buildbot](http://builder.blender.org/download)…
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41228
No description provided.